apps/production/home-assistant/route.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
---
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
  namespace: home-assistant
subsets:
  - addresses:
      - ip: 10.101.2.5
    ports:
      - name: http
        port: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-kowi-it-route
  namespace: home-assistant
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - "home.kowi.it"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant
          kind: Service
          port: 8123
